feat: session api
