# docs/swagger.yaml
@@ -1,30 +1,86 @@
 basePath: /
 definitions:
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
-    type: object
   main.MessageModel:
     properties:
       message:
+        type: string
+    type: object
+  main.Motion:
+    properties:
+      createdAt:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      records:
+        items:
+          $ref: '#/definitions/main.Record'
+        type: array
+      sessionID:
+        type: integer
+      updatedAt:
+        type: string
+    required:
+    - name
+    type: object
+  main.Record:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      motion:
+        $ref: '#/definitions/main.Motion'
+      motionID:
+        type: integer
+      updatedAt:
+        type: string
+      user:
+        $ref: '#/definitions/main.User'
+      userID:
+        type: integer
+      vote:
+        type: integer
+    required:
+    - vote
+    type: object
+  main.Session:
+    properties:
+      createdAt:
+        type: string
+      id:
+        type: integer
+      motions:
+        items:
+          $ref: '#/definitions/main.Motion'
+        type: array
+      name:
+        type: string
+      updatedAt:
+        type: string
+    required:
+    - name
+    type: object
+  main.SessionAdd:
+    properties:
+      name:
         type: string
     type: object
   main.User:
     properties:
       createdAt:
         type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       id:
         type: integer
       name:
         type: string
       updatedAt:
         type: string
+    required:
+    - name
     type: object
 info:
   contact:
@@ -46,6 +102,82 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/main.MessageModel'
+  /session:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Session'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.MessageModel'
+      summary: Get The Last Session
+      tags:
+      - Session
+  /sessions:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/main.Session'
+            type: array
+      summary: List Sessions
+      tags:
+      - Session
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: json
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/main.SessionAdd'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Session'
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.Session'
+      summary: Add A Session
+      tags:
+      - Session
+  /sessions/{id}:
+    get:
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.Session'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.MessageModel'
+      summary: Get Session
+      tags:
+      - Session
   /users:
     get:
       consumes:
