# main.go
@@ -43,8 +43,15 @@ func registerRouter(router *gin.Engine) *gin.Engine {
 	router.GET("/docs", func(c *gin.Context) {
 		c.Redirect(301, "/docs/index.html")
 	})
+
 	router.GET("/", index)
 	router.GET("/users", listUsers)
 	router.PUT("/users/:name", addUser)
+
+	router.GET("/session", getLastSession)
+	router.GET("/sessions", listSessions)
+	router.GET("/sessions/:id", getSession)
+	router.PUT("/sessions", addSession)
+
 	return router
 }
